--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,8 @@
     <string name="app_name">ChristInSong</string>
 
     <string name="blank"/>
+    <string name="donate">Donate</string>
+    <string name="night_mode">Night Mode</string>
+    <string name="settings">Settings</string>
+    <string name="help_feedback">Help &amp; Feedback</string>
 </resources>
