--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
 
     <string name="blank"/>
     <string name="donate">Donate</string>
+    <string name="menu">Menu</string>
     <string name="night_mode">Night Mode</string>
     <string name="settings">Settings</string>
     <string name="help_feedback">Help &amp; Feedback</string>
