--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="donate">Donate</string>
     <string name="menu">Menu</string>
     <string name="night_mode">Night Mode</string>
+    <string name="search">Search</string>
     <string name="settings">Settings</string>
     <string name="help_feedback">Help &amp; Feedback</string>
 </resources>
