--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="night_mode">Night Mode</string>
     <string name="profile">Profile</string>
     <string name="search">Search</string>
+    <string name="search_hint">Search Hymnals</string>
     <string name="settings">Settings</string>
     <string name="help_feedback">Help &amp; Feedback</string>
 </resources>
